--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body{
 /* Animation hover centrale */
 .btn-center::after{
     transform: scale(0, 1);
-    transition: transform 0.3s ease;
+    transition: transform 1s ease;
 }
 
 /* Animation hover centrale */
@@ -55,7 +55,7 @@ body{
 .btn-left::after{
     transform: scale(0, 1);
     transform-origin: 0% 100%;
-    transition: transform 0.5s ease;
+    transition: transform 1s ease;
 }
 
 /* Animation hover Gauche */
@@ -65,17 +65,16 @@ body{
 
 /* Animation hover Bottom */
 .btn-bottom{
-    overflow: hidden;
-}
-.btn-bottom::after{
-    transform: translateY(3px);
+    background: linear-gradient(to top, turquoise 50%, lightblue 50%);
+    background-size: 100% 200%;
+    background-position: top;
 }
 
-.btn-bottom:hover::after{
-    transform: translateY(100px);
-    transition: transform 0.5s ease-in;
-    height: 20%;
+.btn-bottom:hover{
+  background-position: bottom;
+  transition: all 1s ease-out;
 }
+
 
 
 
